fix gap filter menu

--- a/src/styles/components/listEmployee.scss
+++ b/src/styles/components/listEmployee.scss
@@ -59,6 +59,9 @@
       position: absolute;
       width: 100%;
       max-width: 160px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
       top: 20px;
       right: 10px;
       padding: 12px 24px;
